--- a/Forum/Views/Home/Index.cshtml
+++ b/Forum/Views/Home/Index.cshtml
@@ -2,8 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="hero-section">
+    <h1 class="display-4">Forum</h1>
+    <p>Forum message board</p>
 </div>
 
