--- a/Forum/Views/Shared/_Layout.cshtml
+++ b/Forum/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Forum.styles.css" asp-append-version="true" />
+    <script src="https://kit.fontawesome.com/4952cd5916.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -31,12 +32,16 @@
         </nav>
     </header>
     <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+
+        <div class="side-column">
+        </div>
+
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+   <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2023 - Forum - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
