--- a/Forum/Views/Shared/_PostBox.cshtml
+++ b/Forum/Views/Shared/_PostBox.cshtml
@@ -1,5 +1,12 @@
 ﻿@model ThreadPostViewModel;
 
 <div class="forum-post">
- 
+    <div class="inner-container">
+        <div class="topic">
+
+            <div class="post-title">@Model.PostTitle</div>
+            <div class="post-description">@Model.TextBody </div>
+
+        </div>
+    </div>
 </div>
