--- a/Forum/Views/Home/Index.cshtml
+++ b/Forum/Views/Home/Index.cshtml
@@ -2,8 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 
+
 <div class="hero-section">
-    <h1 class="display-4">Forum</h1>
-    <p>Forum message board</p>
+
+    <img src="~/images/coding.png" alt="Coding Image" />
+   
+    <h3 class="pl-3 mt-2">&nbsp;&nbsp;Message Boards</h3>
+    <p class="pl-3">&nbsp;&nbsp;&nbsp;Before posting please check out the forum rules, also make sure to try out the search functionality before posting new threads, your questions may already been answered</p>
 </div>
+
 
