--- a/Forum/Views/Shared/_AddPost.cshtml
+++ b/Forum/Views/Shared/_AddPost.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Forum.Models.ThreadPostViewModel 
 
 <div>
-    <form asp-action="AddPost" method="post">
+    <form asp-action="Create" method="post">
         <input type="hidden" asp-for="ThreadReferenceId" value="@Model.ThreadReferenceId" />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-inner-container">
@@ -15,7 +15,7 @@
             <span asp-validation-for="TextBody" class="text-danger"></span>
         </div>
         <div class="form-inner-container">
-            <input asp-controller="Post" asp-action="AddPost" type="submit" value="Skapa" class="btn btn-primary" />
+            <input asp-controller="Post" asp-action="Create" type="submit" value="Skapa" class="btn btn-primary" />
         </div>
     </form>
 </div>
