--- a/Forum/Views/Shared/_AddThread.cshtml
+++ b/Forum/Views/Shared/_AddThread.cshtml
@@ -1,8 +1,27 @@
 ﻿@model Forum.Models.TopicThreadViewModel
 
-<div>
+<div class="form-container">
     <form asp-action="Create" method="post">
-
+        <input type="hidden" asp-for="TopicReferenceId" value="@Model.TopicReferenceId" />
+        <input type="hidden" asp-for="ThreadReferenceId" value="@Model.ThreadReferenceId" />
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-inner-container">
+            <label asp-for="ThreadHeading" class="control-label"></label>
+            <input asp-for="ThreadHeading" class="form-control" />
+            <span asp-validation-for="ThreadHeading" class="text-danger"></span>
+        </div>
+        <div class="form-inner-container">
+            <label asp-for="PostTitle" class="control-label"></label>
+            <input asp-for="PostTitle" class="form-control" />
+            <span asp-validation-for="PostTitle" class="text-danger"></span>
+        </div>
+        <div class="form-inner-container">
+            <label asp-for="TextBody" class="control-label"></label>
+            <textarea rows="4" input asp-for="TextBody" class="form-control"></textarea>
+            <span asp-validation-for="TextBody" class="text-danger"></span>
+        </div>
+        <div class="form-inner-container">
+            <input asp-controller="Thread" asp-action="Create" type="submit" value="Skapa" class="btn btn-primary" />
+        </div>
     </form>
 </div>
-
